--- a/easymessage/WebContent/pages/js/template/push_msg_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_list_template.html
@@ -52,8 +52,8 @@
 							<div id="msg-list-start-date-time-picker-div"
 								class="input-group col-lg-11  col-sm-9 col-xs-9">
 								<input id="msg-list-start-date-input" type="text"
-									class="form-control" disabled="disabled">
-									<input type="hidden" id="defaultStartDate"> <span
+									class="form-control" disabled="disabled"> <input
+									type="hidden" id="defaultStartDate"> <span
 									class="input-group-addon"> <i
 									class="fa fa-clock-o bigger-110"></i>
 								</span>
@@ -78,6 +78,23 @@
 									<option value="0">선택</option>
 									<option value="1">발송상태</option>
 									<option value="2">수신번호</option>
+
+
+								</select>
+							</div>
+
+
+
+						</div>
+
+						<div class="form-group col-lg-12 col-sm-12 col-xs-12"
+							style="display: none;" id="msg-list-search-ptalk-div">
+							<label class="col-lg-1 col-sm-3 col-xs-3"> Ptalk유형</label>
+							<div class="input-group col-lg-11  col-sm-9 col-xs-9">
+								<select class="form-control" id="msg-list-search-ptalk-select">
+									<option value="1">Ptalk1.0</option>
+									<option value="2">Ptalk2.0</option>
+
 
 
 								</select>
@@ -162,6 +179,7 @@
 								<thead>
 									<tr>
 										<th>발송시간</th>
+										<th>Ptalk유형</th>
 										<th>수신번호</th>
 										<th>발송상태</th>
 										<th>반복시간</th>
@@ -214,6 +232,7 @@
 								class="table table-striped  table-hover" width="100%;">
 								<thead>
 									<tr>
+										<th>Ptalk유형</th>
 										<th>수신번호</th>
 										<th>수신확인</th>
 										<th>수신확인시간</th>
@@ -301,13 +320,12 @@
 															</div>
 														</div>
 														<div class="form-group"
-															id="msg-resend-user-target-show-div"
-															style="display: none;">
+															id="msg-resend-user-target-show-div">
 															<i class="ace-icon fa fa-caret-right blue"></i> <label>수신
 																무전번호 목록 </label><br>
-															<textarea class="form-control"
-																id="msg-resend-user-target-show-input"
-																disabled="disabled"></textarea>
+															<select multiple="multiple" class="form-control"
+																id="msg-resend-user-target-select"
+																disabled="disabled"></select>
 
 														</div>
 														<i class="ace-icon fa fa-caret-right blue"></i> <label
@@ -328,7 +346,7 @@
 															<div>
 																<input type="hidden" id="resend-file-format-hidden">
 																<input type="hidden" id="resend-file-name-hidden">
-															
+
 															</div>
 														</div>
 
