--- a/easymessage/WebContent/pages/js/template/push_msg_send_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_send_template.html
@@ -32,7 +32,7 @@
 					<li class=""><a data-toggle="tab" href="#msg-send-group"
 						id="msg-send-group-div"> 직접 입력 발송 </a></li>
 					<li class=""><a data-toggle="tab" href="#msg-send-excel"
-						id="msg-send-excel-div"> 엑셀 입력 발송 </a></li>
+						id="msg-send-excel-div"> 개별 입력 발송 </a></li>
 
 					<!-- 		<li><a data-toggle="tab" href="#msg-send-private"
 						id="msg-send-private-div"> 개인 발송(직접 입력) </a></li> -->
@@ -43,7 +43,7 @@
 						<div class="widget-box">
 							<div class="widget-header">
 								<i class="ace-icon fa fa-envelope bigger-180"></i>
-								<h4 class="widget-title">&nbsp;엑셀 발송</h4>
+								<h4 class="widget-title">&nbsp;개별 발송</h4>
 							</div>
 							<div class="widget-body ">
 								<div class="widget-main">
@@ -474,6 +474,13 @@
 											<input type="file" id="group-image-upload-input">
 										</form>
 									</div>
+
+									<div id="group-fileprogress" class="progress"
+										style="display: none;">
+										<div class="progress-bar progress-bar-striped active"
+											role="progressbar" aria-valuenow="40" aria-valuemin="0"
+											aria-valuemax="100" style="width: 100%">파일 첨부중</div>
+									</div>
 									<div id="msg-send-group-repeat-div" style="display: none;">
 										<div class="form-group">
 											<label>횟수 </label><br> <span
@@ -900,7 +907,11 @@
 		<div class="col-lg-8" id="excel-list-div" style="display: none;">
 			<div class="page-header">
 
-				<h4 class="text-primary">엑셀 발송</h4>
+				<h4 class="text-primary">
+					개별 발송<small> <i class="ace-icon fa fa-angle-double-right"></i>
+						&nbsp;아래 엑셀 시트를 이용, 화면을 편집하여 사용 합니다.
+					</small>
+				</h4>
 
 				<!-- 				<div class="btn-group"> -->
 				<!-- 					<button id="contact-delete-btn" class="btn btn-white btn-warning "> -->
@@ -917,12 +928,14 @@
 						<button class="btn btn-white btn-info "
 							id="msg-send-excel-validation">
 							<i class="ace-icon fa fa-exclamation bigger-120 blue"></i>오류검사
-						</button>
 
+						</button>
+						
 
 
 					</div>
-					<div class="btn-group ">
+					<small id="error-small" style="display: none;">발견된 오류가 없습니다!</small>
+					<!-- 	<div class="btn-group ">
 
 						<button class="btn btn-white btn-info "
 							id="msg-send-excel-all-delete">
@@ -931,16 +944,17 @@
 
 
 
-					</div>
-					<div class="btn-group ">
+					</div> -->
+					<!-- 					<div class="btn-group "> -->
 
-						<button class="btn btn-white btn-info "
-							id="msg-send-excel-validation-delete">
-							<i class="ace-icon fa fa-file-excel-o  bigger-120 blue"></i>CSV 저장
-						</button>
+					<!-- 						<button class="btn btn-white btn-info " -->
+					<!-- 							id="msg-send-excel-handson-save"> -->
+					<!-- 							<i class="ace-icon fa fa-file-excel-o  bigger-120 blue"></i>CSV -->
+					<!-- 							저장 -->
+					<!-- 						</button> -->
 
 
-					</div>
+					<!-- 					</div> -->
 
 				</div>
 			</div>
