--- a/easymessage/WebContent/pages/js/template/push_stats_template.html
+++ b/easymessage/WebContent/pages/js/template/push_stats_template.html
@@ -82,6 +82,8 @@
 											<th>총 발송건수</th>
 											<th>발송됨</th>
 											<th>발송중</th>
+											<th>TMS</th>
+											<th>MMS</th>
 											<th>수신자 없음</th>
 											<th>예약취소</th>
 											<th>발송오류</th>
