--- a/easymessage/WebContent/pages/js/template/push_user_info_template.html
+++ b/easymessage/WebContent/pages/js/template/push_user_info_template.html
@@ -8,22 +8,23 @@
 </div>
 <!--breadcrumbs -->
 <div class="page-content">
-<!-- 	<div class="page-header"> -->
-<!-- 		<h1> -->
-<!-- 			사용자 정보 <small> <i class="ace-icon fa fa-angle-double-right"></i> -->
-<!-- 				사용자 정보 수정 및 확인 -->
-<!-- 			</small> -->
-<!-- 		</h1> -->
-<!-- 	</div> -->
+	<!-- 	<div class="page-header"> -->
+	<!-- 		<h1> -->
+	<!-- 			사용자 정보 <small> <i class="ace-icon fa fa-angle-double-right"></i> -->
+	<!-- 				사용자 정보 수정 및 확인 -->
+	<!-- 			</small> -->
+	<!-- 		</h1> -->
+	<!-- 	</div> -->
 	<!-- /.page-header -->
-		<div class="row">
+	<div class="row">
 		<div class="col-xs-12">
 			<div class="alert alert-info">
 				<button class="close" data-dismiss="alert">
 					<i class="ace-icon fa fa-times"></i>
 				</button>
 
-				<i class="ace-icon fa fa-hand-o-right"></i> 주의 ! 발송 번호를 등록해아 정상 사용이 가능합니다.
+				<i class="ace-icon fa fa-hand-o-right"></i> 주의 ! 발송 번호를 등록해야 정상 사용이
+				가능합니다.
 			</div>
 		</div>
 	</div>
@@ -82,7 +83,7 @@
 									disabled="disabled" maxlength="14">
 							</div>
 						</div>
-							<div class="space-8"></div>
+						<div class="space-8"></div>
 						<div class="clearfix">
 							<div class="col-md-offset-3 col-md-9">
 								<button class="btn btn-info" id="user-info-modify-btn"
@@ -95,6 +96,9 @@
 								<button class="btn" id="user-info-confirm-btn" type="button">
 									<i class="ace-icon fa fa-check bigger-110"></i> 확인
 								</button>
+								<a class="btn btn-primary pull-right" type="button" id="easymessage-pdf-download"> <i
+									class="ace-icon fa fa-file-pdf-o bigger-110"></i> 사용 설명서 다운로드
+								</a>
 							</div>
 						</div>
 
