--- a/easymessage/WebContent/pages/js/template/push_msg_send_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_send_template.html
@@ -85,7 +85,7 @@
 										<i class="ace-icon fa fa-caret-right blue"></i> <label>자동
 											치환</label>&nbsp;<i class="ace-icon fa fa-question-circle blue"
 											data-tooltip="tooltip"
-											title="발송시에 태그한 내용으로 치환되며,내용길이에 따라 MMS로 전환 될수 있습니다."></i><br>
+											title="태그 내용으로 자동 치환되어 입력되며,메시지 내용 길이에 따라 MMS 메시지로 발송 될 수 있습니다."></i><br>
 
 
 
@@ -163,8 +163,8 @@
 									<div>
 										<i class="ace-icon fa fa-clock-o blue"></i>&nbsp;<label>
 											예약 메시지 설정</label><br> <span
-											style="font-size: x-small; font-weight: lighter;">(예약메시지
-											발송이 필요한 경우 오른쪽 캘린더 설정을 해주세요.)</span>
+											style="font-size: x-small; font-weight: lighter;">(오른쪽
+											캘린더를 이용하여 시간 설정을 해주세요.최소5분 이후 시간 설정 가능합니다.)</span>
 									</div>
 									<div class="input-group" id="msg-send-excel-reservation-div">
 
@@ -236,7 +236,7 @@
 										<i class="ace-icon fa fa-caret-right blue"></i> <label>자동
 											치환</label>&nbsp;<i class="ace-icon fa fa-question-circle blue"
 											data-tooltip="tooltip"
-											title="발송시에 태그한 내용으로 치환되며,내용길이에 따라 MMS로 전환 될수 있습니다."></i><br>
+											title="태그 내용으로 자동 치환되어 입력되며,메시지 내용 길이에 따라 MMS 메시지로 발송 될 수 있습니다."></i><br>
 
 
 
@@ -325,8 +325,8 @@
 									<div>
 										<i class="ace-icon fa fa-clock-o blue"></i>&nbsp;<label>
 											예약 메시지 설정</label><br> <span
-											style="font-size: x-small; font-weight: lighter;">(예약메시지
-											발송이 필요한 경우 오른쪽 캘린더 설정을 해주세요.)</span>
+											style="font-size: x-small; font-weight: lighter;">(오른쪽
+											캘린더를 이용하여 시간 설정을 해주세요.최소5분 이후 시간 설정 가능합니다.)</span>
 									</div>
 									<div class="input-group"
 										id="msg-send-contact-private-reservation-div">
@@ -462,25 +462,6 @@
 											메시지 </label>&nbsp; <input id="msg-send-group-user-repeat-check"
 											type="checkbox" />
 									</div>
-									<div>
-										<i class="ace-icon fa fa-paperclip blue"></i>&nbsp; <label>파일
-											첨부</label>&nbsp;<i class="fa fa-exclamation-triangle red"
-											data-tooltip="tooltip" title=""
-											data-original-title="파일 첨부시 MMS로 전환되어 발송 됩니다."></i>
-										<!-- #section:custom/file-input -->
-
-										<form id="group-image-upload-form" method="post"
-											enctype="multipart/form-data">
-											<input type="file" id="group-image-upload-input">
-										</form>
-									</div>
-
-									<div id="group-fileprogress" class="progress"
-										style="display: none;">
-										<div class="progress-bar progress-bar-striped active"
-											role="progressbar" aria-valuenow="40" aria-valuemin="0"
-											aria-valuemax="100" style="width: 100%">파일 첨부중</div>
-									</div>
 									<div id="msg-send-group-repeat-div" style="display: none;">
 										<div class="form-group">
 											<label>횟수 </label><br> <span
@@ -508,13 +489,33 @@
 												placeholder="옵션       반복 시간(분 단위)" disabled="disabled">
 										</div>
 									</div>
+									<div>
+										<i class="ace-icon fa fa-paperclip blue"></i>&nbsp; <label>파일
+											첨부</label>&nbsp;<i class="fa fa-exclamation-triangle red"
+											data-tooltip="tooltip" title=""
+											data-original-title="파일 첨부시 MMS로 전환되어 발송 됩니다."></i>
+										<!-- #section:custom/file-input -->
+
+										<form id="group-image-upload-form" method="post"
+											enctype="multipart/form-data">
+											<input type="file" id="group-image-upload-input">
+										</form>
+									</div>
+
+									<div id="group-fileprogress" class="progress"
+										style="display: none;">
+										<div class="progress-bar progress-bar-striped active"
+											role="progressbar" aria-valuenow="40" aria-valuemin="0"
+											aria-valuemax="100" style="width: 100%">파일 첨부중</div>
+									</div>
+
 
 									<br>
 									<div>
 										<i class="ace-icon fa fa-clock-o blue"></i>&nbsp;<label>
 											예약 메시지 설정</label><br> <span
-											style="font-size: x-small; font-weight: lighter;">(예약메시지
-											발송이 필요한 경우 오른쪽 캘린더 설정을 해주세요.)</span>
+											style="font-size: x-small; font-weight: lighter;">(오른쪽
+											캘린더를 이용하여 시간 설정을 해주세요.최소5분 이후 시간 설정 가능합니다.)</span>
 									</div>
 									<div class="input-group" id="msg-send-group-reservation-div">
 
@@ -909,7 +910,9 @@
 
 				<h4 class="text-primary">
 					개별 발송<small> <i class="ace-icon fa fa-angle-double-right"></i>
-						&nbsp;아래 엑셀 시트를 이용, 화면을 편집하여 사용 합니다.
+						&nbsp;아래 표 화면에서 직접 편집 후에 메시지 발송을 합니다.(사용팁		<i class="ace-icon fa fa-question-circle blue"
+											data-tooltip="tooltip"
+											title="엑셀 파일에서 복사 후 편집하여 사용할 수 있으며,입력 후에는 오류검사를 실행 해주세요!"></i>)
 					</small>
 				</h4>
 
@@ -923,6 +926,8 @@
 			</div>
 			<div class="clearfix">
 				<div class=" tableTools-container">
+		
+					
 					<div class="btn-group ">
 
 						<button class="btn btn-white btn-info "
@@ -930,11 +935,12 @@
 							<i class="ace-icon fa fa-exclamation bigger-120 blue"></i>오류검사
 
 						</button>
-						
+
 
 
 					</div>
-					<small id="error-small" style="display: none;">발견된 오류가 없습니다!</small>
+					<small id="error-small" style="display: none;">발견된 오류가
+						없습니다!</small>
 					<!-- 	<div class="btn-group ">
 
 						<button class="btn btn-white btn-info "
