--- a/easymessage/WebContent/pages/js/template/push_user_info_template.html
+++ b/easymessage/WebContent/pages/js/template/push_user_info_template.html
@@ -83,6 +83,7 @@
 									disabled="disabled" maxlength="14">
 							</div>
 						</div>
+
 						<div class="space-8"></div>
 						<div class="clearfix">
 							<div class="col-md-offset-3 col-md-9">
@@ -93,24 +94,26 @@
 								</button>
 
 								&nbsp; &nbsp;
-								<button class="btn" id="user-info-confirm-btn" type="button">
+								<button class="btn" id="user-info-confirm-btn" type="button" >
 									<i class="ace-icon fa fa-check bigger-110"></i> 확인
 								</button>
-								<a class="btn btn-primary pull-right" type="button" id="easymessage-pdf-download"> <i
-									class="ace-icon fa fa-file-pdf-o bigger-110"></i> 사용 설명서 다운로드
-								</a>
+								<div class="space-8"></div>
+								<div class="clearfix">
+									<hr>
+									<a class="btn btn-primary pull-right" type="button"
+										id="easymessage-pdf-download"> <i
+										class="ace-icon fa fa-file-pdf-o bigger-110"></i> 사용자 설명서 다운로드
+									</a>
+								</div>
 							</div>
+
 						</div>
 
+
+
+
 					</div>
-
-
-
-
 				</div>
-			</div>
-
-
 		</form>
 	</div>
 	<!--row-->
